--- a/4taku/Base.lproj/Main.storyboard
+++ b/4taku/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -109,10 +108,10 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="第XX問" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hzd-fg-lKc">
-                                <rect key="frame" x="87.666666666666686" y="64" width="200" height="40"/>
+                                <rect key="frame" x="88.333333333333314" y="64" width="200" height="40"/>
                                 <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="0.39720676369863012" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="Hu3-po-sM3"/>
+                                    <constraint firstAttribute="width" constant="200" id="Hu3-po-sM3"/>
                                     <constraint firstAttribute="height" constant="40" id="uZk-M0-xgZ" userLabel="height = 30"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name=".HiraKakuInterface-W3" family=".Hiragino Kaku Gothic Interface" pointSize="17"/>
@@ -127,7 +126,7 @@
                                     <constraint firstAttribute="width" constant="300" id="TEa-kq-CbP"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFs-Kb-8y1">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFs-Kb-8y1">
                                 <rect key="frame" x="30" y="134" width="315" height="20.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -175,7 +174,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Qm-7u-OtE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-110.14492753623189" y="-610.59782608695662"/>
+            <point key="canvasLocation" x="-111.2" y="-611.08374384236458"/>
         </scene>
         <!--Result View Controller-->
         <scene sceneID="swu-3z-YxB">
@@ -186,13 +185,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GvZ-ay-KTY">
-                                <rect key="frame" x="30" y="74" width="315" height="342.33333333333331"/>
+                                <rect key="frame" x="37.666666666666657" y="74" width="300" height="300"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="GvZ-ay-KTY" secondAttribute="height" multiplier="150:163" id="U7O-k0-3wC"/>
+                                    <constraint firstAttribute="height" constant="300" id="avg-fn-3cu"/>
+                                    <constraint firstAttribute="width" constant="300" id="sTR-TB-TYc"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNf-zk-uiI">
-                                <rect key="frame" x="30" y="708" width="315" height="40"/>
+                                <rect key="frame" x="30.333333333333343" y="708" width="314.66666666666663" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="mQW-86-P5x"/>
                                 </constraints>
@@ -203,8 +203,8 @@
                                     <segue destination="hvD-nD-MaA" kind="unwind" unwindAction="unWindSegue:" id="vDf-2n-5Yd"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drp-72-VAd">
-                                <rect key="frame" x="30" y="446.33333333333331" width="315" height="20.333333333333314"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drp-72-VAd">
+                                <rect key="frame" x="30.333333333333343" y="404" width="314.66666666666663" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -212,15 +212,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="GR2-wY-kMx" firstAttribute="trailing" secondItem="GvZ-ay-KTY" secondAttribute="trailing" constant="30" id="55c-uS-09r"/>
-                            <constraint firstItem="GvZ-ay-KTY" firstAttribute="top" secondItem="GR2-wY-kMx" secondAttribute="top" constant="30" id="5Eo-hn-7zi"/>
-                            <constraint firstItem="drp-72-VAd" firstAttribute="top" secondItem="GvZ-ay-KTY" secondAttribute="bottom" constant="30" id="6Eq-b0-A6K"/>
-                            <constraint firstItem="oNf-zk-uiI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="drp-72-VAd" secondAttribute="bottom" constant="30" id="7EQ-7o-Ek5"/>
-                            <constraint firstItem="GvZ-ay-KTY" firstAttribute="leading" secondItem="GR2-wY-kMx" secondAttribute="leading" constant="30" id="Ipg-e1-aFd"/>
+                            <constraint firstItem="GvZ-ay-KTY" firstAttribute="top" secondItem="GR2-wY-kMx" secondAttribute="top" constant="30" id="4tw-BW-7Ve"/>
+                            <constraint firstItem="drp-72-VAd" firstAttribute="top" secondItem="GvZ-ay-KTY" secondAttribute="bottom" constant="30" id="EDy-iC-aXZ"/>
+                            <constraint firstItem="drp-72-VAd" firstAttribute="leading" secondItem="GR2-wY-kMx" secondAttribute="leading" constant="30" id="FFx-7z-G0m"/>
+                            <constraint firstItem="GR2-wY-kMx" firstAttribute="trailing" secondItem="drp-72-VAd" secondAttribute="trailing" constant="30" id="Fr7-ht-EJ3"/>
                             <constraint firstItem="drp-72-VAd" firstAttribute="leading" secondItem="GR2-wY-kMx" secondAttribute="leading" constant="30" id="YfT-8z-ttq"/>
                             <constraint firstItem="oNf-zk-uiI" firstAttribute="leading" secondItem="GR2-wY-kMx" secondAttribute="leading" constant="30" id="if4-dV-dtU"/>
                             <constraint firstItem="GR2-wY-kMx" firstAttribute="trailing" secondItem="oNf-zk-uiI" secondAttribute="trailing" constant="30" id="kLP-sI-bZo"/>
                             <constraint firstItem="GR2-wY-kMx" firstAttribute="bottom" secondItem="oNf-zk-uiI" secondAttribute="bottom" constant="30" id="kVm-oh-qni"/>
+                            <constraint firstItem="GvZ-ay-KTY" firstAttribute="centerX" secondItem="SKA-H2-Rdl" secondAttribute="centerX" id="oWg-ID-8JB"/>
                             <constraint firstItem="GR2-wY-kMx" firstAttribute="trailing" secondItem="drp-72-VAd" secondAttribute="trailing" constant="30" id="zYl-2b-wE0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GR2-wY-kMx"/>
